--- a/app/src/main/res/animator/fill_from_top.xml
+++ b/app/src/main/res/animator/fill_from_top.xml
@@ -23,7 +23,7 @@
 
  -->
 
-<!-- animate an filling of the heart from the bottom -->
+<!-- animate an filling of the heart from the top -->
 
 <objectAnimator
 
