--- a/app/src/main/res/drawable/animated_vector_empty_to_left.xml
+++ b/app/src/main/res/drawable/animated_vector_empty_to_left.xml
@@ -35,9 +35,9 @@
 
     <target
 
-        android:animation="@animator/empty_to_bottom_left"
+        android:animation="@animator/empty_to_left"
 
-        android:name="@string/path_name_heart_clip_bottom_left"
+        android:name="@string/path_name_heart_clip_left"
 
         />
 
