--- a/app/src/main/res/drawable/animated_vector_fill_from_left.xml
+++ b/app/src/main/res/drawable/animated_vector_fill_from_left.xml
@@ -35,9 +35,9 @@
 
     <target
 
-        android:animation="@animator/fill_from_bottom_left"
+        android:animation="@animator/fill_from_left"
 
-        android:name="@string/path_name_heart_clip_bottom_left"
+        android:name="@string/path_name_heart_clip_left"
 
         />
 
