--- a/app/src/main/res/animator/empty_to_right.xml
+++ b/app/src/main/res/animator/empty_to_right.xml
@@ -23,7 +23,7 @@
 
  -->
 
-<!-- animate an emptying of the heart to the bottom -->
+<!-- animate an emptying of the heart to the right -->
 
 <objectAnimator
 
@@ -33,7 +33,7 @@
 
     android:valueFrom="@string/path_data_heart_clip_shown_rectangle"
 
-    android:valueTo="@string/path_data_heart_clip_hidden_bottom"
+    android:valueTo="@string/path_data_heart_clip_hidden_right"
 
     android:duration="@integer/animation_time_heart_empty"
 
