--- a/app/src/main/res/animator/fill_from_left.xml
+++ b/app/src/main/res/animator/fill_from_left.xml
@@ -23,7 +23,7 @@
 
  -->
 
-<!-- animate an filling of the heart from the bottom -->
+<!-- animate an filling of the heart from the left -->
 
 <objectAnimator
 
@@ -31,7 +31,7 @@
 
     android:propertyName="pathData"
 
-    android:valueFrom="@string/path_data_heart_clip_hidden_bottom"
+    android:valueFrom="@string/path_data_heart_clip_hidden_left"
 
     android:valueTo="@string/path_data_heart_clip_shown_rectangle"
 
