Completed button functionality in API >= 21

--- a/app/src/main/res/drawable/animated_vector_empty_to_top_left.xml
+++ b/app/src/main/res/drawable/animated_vector_empty_to_top_left.xml
@@ -29,7 +29,7 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:drawable="@drawable/ic_heart"
+    android:drawable="@drawable/ic_heart_top_left"
 
     >
 
